# stonks

./: .gitignore  pyproject.toml
src/: pyproject.toml
src/api/: __init__.py  auth.py  config.py  db.py  main.py
src/models/: assets.py  base.py  user.py
src/templates/: base.html
src/utils/: alpaca.py  database.py
